--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <a href="https://poojalahane.github.io/guess-number-game/"><i class="fa-sharp fa-solid fa-link"></i></a>
             </div>
           </div>
-          <div class="work">
+<!--           <div class="work">
             <img src="images/w3.jpg" alt="" />
             <div class="layer">
               <h3>Quote Generator</h3>
@@ -174,7 +174,7 @@
                 The "Quote Generator" is a web-based application that displays random quotes to inspire and motivate users.
               </p>
               <a href="https://poojalahane.github.io/Quote_Generator/"><i class="fa-sharp fa-solid fa-link"></i></a>
-            </div>
+            </div> -->
           </div>
           <div class="work">
             <img src="images/w4.jpg" alt="" />
@@ -223,7 +223,7 @@
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
-            <a href="images/puja_cv.pdf" download class="btn btn2" style="display: flex;
+            <a href="images/my-cv1.pdf" download class="btn btn2" style="display: flex;
             height:60px;
             text-align:center;
             padding-top:20px;
