--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
     />
   </head>
   <body>
- 
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo-1.png" alt="" class="logo" style="opacity: 0.3;"/>
+          <img
+            src="images/logo-1.png"
+            alt=""
+            class="logo"
+            style="opacity: 0.3"
+          />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-              <!-- <i class="fas fa-times" onclick="closemenu()" </i> -->
+            <!-- <i class="fas fa-times" onclick="closemenu()" </i> -->
           </ul>
           <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
@@ -47,7 +51,12 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Hello! I'm Puja Lahane, a passionate and motivated MERN stack developer with a strong foundation in MongoDB, Express.js, React, and Node.js. As a recent graduate in B.tech Computer Science from Deogiri College, I have developed a keen interest in web development and a commitment to continuous learning and growth in this dynamic field.
+              Hello! I'm Puja Lahane, a passionate and motivated MERN stack
+              developer with a strong foundation in MongoDB, Express.js, React,
+              and Node.js. As a recent graduate in B.tech Computer Science from
+              Deogiri College, I have developed a keen interest in web
+              development and a commitment to continuous learning and growth in
+              this dynamic field.
             </p>
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
@@ -60,24 +69,33 @@
             </div>
             <div class="tab-contents active-tab" id="skills">
               <ul>
-                <li><span>Frontend Development</span><br />Proficient in React, HTML, CSS, and JavaScript. I enjoy crafting responsive and user-friendly interfaces</li>
+                <li>
+                  <span>Frontend Development</span><br />Proficient in React,
+                  HTML, CSS, and JavaScript. I enjoy crafting responsive and
+                  user-friendly interfaces
+                </li>
                 <li>
                   <span>Backend Development</span><br />
-                  Skilled in building robust and scalable server-side applications using Node.js and Express.js.
+                  Skilled in building robust and scalable server-side
+                  applications using Node.js and Express.js.
                 </li>
                 <li>
                   <span>Database Management</span><br />
-                  Experienced with MongoDB for creating and managing databases, ensuring data consistency and security.
+                  Experienced with MongoDB for creating and managing databases,
+                  ensuring data consistency and security.
                 </li>
                 <li>
                   <span>Version Control</span><br />
-                  Comfortable using Git and GitHub for version control and collaborative development.
+                  Comfortable using Git and GitHub for version control and
+                  collaborative development.
                 </li>
               </ul>
             </div>
             <div class="tab-contents" id="experience">
               <ul>
-                <li><span>Phn technology</span><br />MERN Stack Developer Intern</li>
+                <li>
+                  <span>Phn technology</span><br />MERN Stack Developer Intern
+                </li>
                 <li>
                   <span>Oasis Infobyte</span><br />
                   Web Developer Intern
@@ -90,13 +108,15 @@
             </div>
             <div class="tab-contents" id="education">
               <ul>
-                <li><span>Deogiri College</span><br />B.tech Computer Science</li>
+                <li>
+                  <span>Deogiri College</span><br />B.tech Computer Science
+                </li>
                 <li>
                   <span>Shivraj college</span><br />
                   HSC
                 </li>
                 <li>
-                  <span>Shiwaji Highschool</span><br />
+                  <span>Shivaji Highschool</span><br />
                   SSC
                 </li>
               </ul>
@@ -115,7 +135,10 @@
             <i class="fa-solid fa-code"></i>
             <h2>Web Design and Development</h2>
             <p>
-              Web Design and Development is a comprehensive service that involves creating and maintaining websites. It encompasses various aspects, from the initial design phase to the final deployment and ongoing maintenance.
+              Web Design and Development is a comprehensive service that
+              involves creating and maintaining websites. It encompasses various
+              aspects, from the initial design phase to the final deployment and
+              ongoing maintenance.
             </p>
             <a href="#">Learn more</a>
           </div>
@@ -124,7 +147,10 @@
             <i class="fa-solid fa-crop-simple"></i>
             <h2>UI/UX Design</h2>
             <p>
-              UI Design involves designing the interface through which users interact with a product, be it a website, application, or any other digital interface. UX Design focuses on the overall experience a user has when interacting with a product. 
+              UI Design involves designing the interface through which users
+              interact with a product, be it a website, application, or any
+              other digital interface. UX Design focuses on the overall
+              experience a user has when interacting with a product.
             </p>
             <a href="#">Learn more</a>
           </div>
@@ -133,7 +159,9 @@
             <i class="fa-brands fa-app-store-ios"></i>
             <h2>Custom Web Solutions</h2>
             <p>
-              Custom web solutions refer to tailor-made web development services designed to meet the specific needs and requirements of a business or individual.
+              Custom web solutions refer to tailor-made web development services
+              designed to meet the specific needs and requirements of a business
+              or individual.
             </p>
             <a href="#">Learn more</a>
           </div>
@@ -151,9 +179,12 @@
             <div class="layer">
               <h3>Age Calculator</h3>
               <p>
-                The Age Calculator designed to calculate a person's age based on their date of birth. 
+                The Age Calculator designed to calculate a person's age based on
+                their date of birth.
               </p>
-              <a href="https://poojalahane.github.io/Age-Calculator/"><i class="fa-sharp fa-solid fa-link"></i></a>
+              <a href="https://poojalahane.github.io/Age-Calculator/"
+                ><i class="fa-sharp fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
           <div class="work">
@@ -161,29 +192,26 @@
             <div class="layer">
               <h3>Guess Number Game</h3>
               <p>
-                This game is an interactive web-based application where players try to guess a randomly generated number.
+                This game is an interactive web-based application where players
+                try to guess a randomly generated number.
               </p>
-              <a href="https://poojalahane.github.io/guess-number-game/"><i class="fa-sharp fa-solid fa-link"></i></a>
+              <a href="https://poojalahane.github.io/guess-number-game/"
+                ><i class="fa-sharp fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
-          <div class="work">
-            <img src="images/w3.jpg" alt="" />
-            <div class="layer">
-              <h3>Quote Generator</h3>
-              <p>
-                The "Quote Generator" is a web-based application that displays random quotes to inspire and motivate users.
-              </p>
-              <a href="https://poojalahane.github.io/Quote_Generator/"><i class="fa-sharp fa-solid fa-link"></i></a>
-            </div>
-          </div>
+
           <div class="work">
             <img src="images/w4.jpg" alt="" />
             <div class="layer">
               <h3>QR Code Generator</h3>
               <p>
-                The "Quote Generator" is a web-based application that displays random quotes to inspire and motivate users.
+                The "Quote Generator" is a web-based application that displays
+                random quotes to inspire and motivate users.
               </p>
-              <a href="https://poojalahane.github.io/QR-CODE-GENERATOR/"><i class="fa-sharp fa-solid fa-link"></i></a>
+              <a href="https://poojalahane.github.io/QR-CODE-GENERATOR/"
+                ><i class="fa-sharp fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -223,15 +251,21 @@
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
-            <a href="images/puja_cv.pdf" download class="btn btn2" style="display: flex;
-            height:60px;
-            text-align:center;
-            padding-top:20px;
-            margin-left:0px;
-            margin-top:55px">Download Cv</a>
+            <a
+              href="images/my-cv1.pdf"
+              download
+              class="btn btn2"
+              style="
+                display: flex;
+                height: 60px;
+                text-align: center;
+                padding-top: 20px;
+                margin-left: 0px;
+                margin-top: 55px;
+              "
+              >Download Cv</a
+            >
           </div>
-
-       
 
           <div class="contact-right">
             <form action="">
@@ -251,13 +285,15 @@
                 cols="30"
                 rows="10"
               ></textarea>
-              <button type="submit" class="btn btn2" style="color: black;">Submit</button>
+              <button type="submit" class="btn btn2" style="color: black">
+                Submit
+              </button>
             </form>
           </div>
         </div>
       </div>
       <div class="copyright">
-        <p> Made with <i class="fa-solid fa-heart"></i> puja lahane</p>
+        <p>Made with <i class="fa-solid fa-heart"></i> puja lahane</p>
       </div>
     </div>
 
